backend/k8s-manifests/platform/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
  namespace: default
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service-container
          image: tianshuvuln/auth-service:3.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
