backend/k8s-manifests/platform/gateway-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
  namespace: default
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service-container
          image: tianshuvuln/gateway-service:3.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
