backend/k8s-manifests/platform/auth-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-svc
  namespace: default
  labels:
    app: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
