backend/k8s-manifests/platform/gateway-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-svc
  namespace: default
  labels:
    app: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
